--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Set color_var
-        run: echo "color_var=$(if [ ${{ github.event.pull_request.state }} == 'closed' ]; then echo '0018cf'; else echo 'ad020a'; fi)" >> $GITHUB_ENV
+        run: echo "color_var=$(if [ ${{ github.event.pull_request.state }} == 'closed' ]; then echo '003b99'; else echo 'ad020a'; fi)" >> $GITHUB_ENV
 
       - name: 📣 Send teams notification for OPENED pull request
         if: github.event_name == 'pull_request' && github.event.action == 'opened'
@@ -79,9 +79,6 @@ jobs:
               activityTitle:
               activitySubtitle:
               facts:
-                -
-                  name: "MERGE STATUS"
-                  value: "MERGED"
                 -
                   name: "Repo:"
                   value: ${{ github.repository }}
