--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Set color_var
-        run: echo "color_var=$(if [ ${{ github.event.pull_request.state }} == 'closed' ]; then echo '003b99'; else echo 'ad020a'; fi)" >> $GITHUB_ENV
+        run: echo "color_var=$(if [ ${{ github.event.pull_request.state }} == 'closed' && ${{github.event.pull_request.merged == false ]; then echo '003b99'; elseif [ ${{ github.event.pull_request.state }} == 'closed'; then echo 'ad020a'; else echo '019128f' i)" >> $GITHUB_ENV
 
       - name: 📣 Send teams notification for OPENED pull request
         if: github.event.action == 'opened'
@@ -62,7 +62,7 @@ jobs:
         uses: simbo/msteams-message-card-action@latest
         with:
           webhook: ${{ secrets.TEAMS_WEBHOOK_URL }}
-          color: '#019128'
+          color: ${{ env.color_var }}
           title: ${{ github.workflow }}
           message: |
             status: 
