--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -8,24 +8,29 @@ on:
 jobs:
   notify:
     env:
-      COLOR_OPENED: 019128
-      COLOR_MERGED: 5a00ba
-      COLOR_CLOSED: ad020a
+      OPENED_GREEN: 019128
+      CLOSED_RED: ad020a
+      MERGED_PURPLE: 5a00ba
     runs-on: ubuntu-latest
     steps:
+      - name: Set STATUS_COLOR
+        run: echo "STATUS_COLOR=$(if [ ${{ github.event.pull_request.state }} == 'closed' ] && [ ${{ github.event.pull_request.merged }} == false ]; then echo ${{ env.CLOSED_RED }}; elif [ ${{ github.event.pull_request.state }} == 'closed' ]; then echo ${{ env.MERGED_PURPLE }}; else echo ${{ env.OPENED_GREEN }}; fi)" >>    $GITHUB_ENV
+
+
       - name: 📣 Send teams notification for OPENED pull request
         if: github.event.action == 'opened'
         uses: simbo/msteams-message-card-action@latest
         with:
           webhook: ${{ secrets.TEAMS_WEBHOOK_URL }}
+          color: ${{ env.STATUS_COLOR }}
           title: ${{ github.workflow }}
           message: |
             status: 
-            <span style="color:#ffffff;background-color:#${{ env.COLOR_OPENED }};padding:3px;">
+            <span style="color:#ffffff;background-color:#${{ env.STATUS_COLOR }};padding:3px;">
               ${{ github.event.pull_request.state }}
             </span>
             <hr style="height:2px;margin-top:7px;noshade;
-            background-color:#${{ env.COLOR_OPENED }};">
+            background-color:#${{ env.STATUS_COLOR }};">
           buttons: |
             View Pull Request ${{ github.event.pull_request._links.html.href }}
             View org Project https://github.com/orgs/uic-ts/projects/1
@@ -62,14 +67,15 @@ jobs:
         uses: simbo/msteams-message-card-action@latest
         with:
           webhook: ${{ secrets.TEAMS_WEBHOOK_URL }}
+          color: ${{ env.STATUS_COLOR }}
           title: ${{ github.workflow }}
           message: |
             status: 
-            <span style="color:#ffffff;background-color:#${{ env.COLOR_MERGED }};padding:3px;">
+            <span style="color:#ffffff;background-color:#${{ env.STATUS_COLOR }};padding:3px;">
               MERGED
             </span>
             <hr style="height:2px;margin-top:7px;noshade;
-            background-color:#${{ env.COLOR_MERGED }};">
+            background-color:#${{ env.STATUS_COLOR }};">
           buttons: |
             View Pull Request ${{ github.event.pull_request._links.html.href }}
             View org Project https://github.com/orgs/uic-ts/projects/1
@@ -108,14 +114,15 @@ jobs:
         uses: simbo/msteams-message-card-action@latest
         with:
           webhook: ${{ secrets.TEAMS_WEBHOOK_URL }}
+          color: ${{ env.STATUS_COLOR }}
           title: ${{ github.workflow }}
           message: |
             status: 
-            <span style="color:#ffffff;background-color:#${{ env.COLOR_CLOSED }};padding:3px;">
+            <span style="color:#ffffff;background-color:#${{ env.STATUS_COLOR }};padding:3px;">
               ${{ github.event.pull_request.state }}
             </span>
             <hr style="height:2px;margin-top:7px;noshade;
-            background-color:#${{ env.COLOR_CLOSED }};">
+            background-color:#${{ env.STATUS_COLOR }};">
           buttons: |
             View Pull Request ${{ github.event.pull_request._links.html.href }}
             View org Project https://github.com/orgs/uic-ts/projects/1
