--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -16,13 +16,13 @@ jobs:
 
       - name: Color variable conditions
         run: |
-          if [ "${{ github.event.action == *'opened'* }}"]
+          if [ "${{ github.event.action == 'opened' }}"]
             echo "STATUS_COLOR=OPENED_GREEN" >> $GITHUB_ENV
           fi
-          if [ "${{ github.event.action == *'closed'* }}"]
+          if [ "${{ github.event.action == 'closed' }}"]
             echo "STATUS_COLOR=CLOSED_RED" >> $GITHUB_ENV
           fi
-          if [ "${{ github.event.action == *'opened'* }}"]
+          if [ "${{ github.event.action == 'opened' }}"]
             echo "STATUS_COLOR=MERGED_PURPLE" >> $GITHUB_ENV
           fi
       - name: 📣 Send teams notification for OPENED pull request
