--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -22,7 +22,7 @@ jobs:
           if [ "${{ github.event.action == 'closed' }}"]
             echo "STATUS_COLOR=CLOSED_RED" >> $GITHUB_ENV
           fi
-          if [ "${{ github.event.action == 'opened' }}"]
+          if [ "${{ github.event.action == 'merged' }}"]
             echo "STATUS_COLOR=MERGED_PURPLE" >> $GITHUB_ENV
           fi
       - name: 📣 Send teams notification for OPENED pull request
