--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -7,27 +7,22 @@ on:
 
 jobs:
   notify:
-    env:
-      OPENED_GREEN: 019128
-      CLOSED_RED: ad020a
-      MERGED_PURPLE: 5a00ba
     runs-on: ubuntu-latest
     steps:
 
       - name: Color variable conditions
         run: |
-          echo "Pull Request State: ${{ github.event.pull_request.state }}"
           if [[ "${{ github.event.pull_request.state }}" == "open" ]]; then
-            echo "Setting STATUS_COLOR to OPENED_GREEN"
-            echo "STATUS_COLOR=OPENED_GREEN" >> $GITHUB_ENV
+            echo "STATUS_COLOR=019128" >> $GITHUB_ENV
+            echo "GREEN"
           fi
           if [[ "${{ github.event.pull_request.state }}" == "closed" ]]; then
-            echo "Setting STATUS_COLOR to CLOSED_RED"
-            echo "STATUS_COLOR=CLOSED_RED" >> $GITHUB_ENV
+            echo "STATUS_COLOR=ad020a" >> $GITHUB_ENV
+            echo "RED"
           fi
           if [[ "${{ github.event.pull_request.state }}" == "merged" ]]; then
-            echo "Setting STATUS_COLOR to MERGED_PURPLE"
-            echo "STATUS_COLOR=MERGED_PURPLE" >> $GITHUB_ENV
+            echo "STATUS_COLOR=5a00ba" >> $GITHUB_ENV
+            echo "PURPLE"
           fi
 
       - name: 📣 Send teams notification for OPENED pull request
