--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -33,11 +33,11 @@ jobs:
           title: ${{ github.workflow }}
           message: |
             status: 
-            <span style="color:#ffffff;background-color:#${{ env.STATUS_COLOR }};padding:3px;">
-              ${{ github.event.pull_request.state }}
-            </span>
-            <hr style="height:2px;margin-top:7px;noshade;
-            background-color:#${{ env.STATUS_COLOR }};">
+              <span style="color:#ffffff;background-color:#${{ env.STATUS_COLOR }};padding:3px;">
+                ${{ github.event.pull_request.merged ? 'MERGED' : github.event.pull_request.state }}
+              </span>
+              <hr style="height:2px;margin-top:7px;noshade;
+              background-color:#${{ env.STATUS_COLOR }};">
           buttons: |
             View Pull Request ${{ github.event.pull_request._links.html.href }}
             View org Project https://github.com/orgs/uic-ts/projects/1
